kubernetes/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: default
  name: api
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      name: api
      labels:
        name: api
    spec:
      containers:
        - name: api
          image: gcr.io/brain-opera-deployment/helloworld
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /test
              port: 8000
          ports:
            - containerPort: 8000
              name: http
