kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: api
  labels:
    name: api
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    name: api
  type: NodePort
