kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: brain-opera-ingress
spec:
  backend:
    serviceName: api
    servicePort: 8000
